* Added start of VFS to main trunk (from grover).

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -270,6 +270,22 @@
     <Compile Include="Shell\Commands\CommandTableEntry.cs" />
     <Compile Include="Shell\Commands\CommandTableHeader.cs" />
     <Compile Include="Shell\Prompter.cs" />
+    <Compile Include="Vfs\AccessCheck.cs" />
+    <Compile Include="Vfs\AccessMode.cs" />
+    <Compile Include="Vfs\Directory.cs" />
+    <Compile Include="Vfs\DirectoryEntry.cs" />
+    <Compile Include="Vfs\FileSystemFactory.cs" />
+    <Compile Include="Vfs\IDirectory.cs" />
+    <Compile Include="Vfs\IFileSystem.cs" />
+    <Compile Include="Vfs\IFileSystemService.cs" />
+    <Compile Include="Vfs\IVfsNode.cs" />
+    <Compile Include="Vfs\NodeBase.cs" />
+    <Compile Include="Vfs\PathResolutionFlags.cs" />
+    <Compile Include="Vfs\PathResolver.cs" />
+    <Compile Include="Vfs\PathSplitter.cs" />
+    <Compile Include="Vfs\SymbolicLink.cs" />
+    <Compile Include="Vfs\VfsNodeType.cs" />
+    <Compile Include="Vfs\VirtualFileSystem.cs" />
     <Compile Include="ASCII.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Clock.cs" />
@@ -280,6 +296,7 @@
     <Compile Include="EventRegisterStatus.cs" />
     <Compile Include="KernelError.cs" />
     <Compile Include="KernelStage.cs" />
+    <Compile Include="KernelTestsWrapper.cs" />
     <Compile Include="KeyMap.cs" />
     <Compile Include="Multiboot.cs" />
     <Compile Include="PageAllocator.cs" />
