* A few fixes to previous commit

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -92,7 +92,7 @@
     <Compile Include="ADC\X86\IDT.cs" />
     <Compile Include="ADC\X86\Interlocked.cs" />
     <Compile Include="ADC\X86\IO.cs" />
-    <Compile Include="ADC\X86\IOPortStream8bit.cs" />
+    <Compile Include="ADC\X86\IOPortAccess.cs" />
     <Compile Include="ADC\X86\IRQHandler16bit.cs" />
     <Compile Include="ADC\X86\Keyboard.cs" />
     <Compile Include="ADC\X86\MemoryUtil.cs" />
@@ -113,6 +113,8 @@
     <Compile Include="ADC\Dispatcher.cs" />
     <Compile Include="ADC\ExceptionHandling.cs" />
     <Compile Include="ADC\Interlocked.cs" />
+    <Compile Include="ADC\IOPort.cs" />
+    <Compile Include="ADC\IOPortAccess.cs" />
     <Compile Include="ADC\IProcessor.cs" />
     <Compile Include="ADC\IScheduler.cs" />
     <Compile Include="ADC\Keyboard.cs" />
@@ -134,8 +136,10 @@
     <Compile Include="DiagnosticTool\Server.cs" />
     <Compile Include="DriverSystem\Drivers\Block\FloppyDiskDriver.cs" />
     <Compile Include="DriverSystem\Drivers\Block\GenericBlockDeviceAdapter.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\GenericBlockDevicePartition.cs" />
     <Compile Include="DriverSystem\Drivers\Block\IBlockDevice.cs" />
     <Compile Include="DriverSystem\Drivers\Block\IBlockDeviceController.cs" />
+    <Compile Include="DriverSystem\Drivers\Block\IDEDiskDriver.cs" />
     <Compile Include="DriverSystem\Drivers\Block\KernelDiskDriver.cs" />
     <Compile Include="DriverSystem\Drivers\Block\RamDiskDriver.cs" />
     <Compile Include="DriverSystem\Drivers\Character\KeyboardDriver.cs" />
@@ -146,14 +150,15 @@
     <Compile Include="DriverSystem\HardwareResources\IOPortStream.cs" />
     <Compile Include="DriverSystem\HardwareResources\IRQHandler.cs" />
     <Compile Include="DriverSystem\HardwareResources\MemoryBlock.cs" />
+    <Compile Include="DriverSystem\DeviceController.cs" />
+    <Compile Include="DriverSystem\DeviceControllers.cs" />
     <Compile Include="DriverSystem\DeviceManager.cs" />
-    <Compile Include="DriverSystem\DeviceResource.cs" />
-    <Compile Include="DriverSystem\DeviceResourceManager.cs" />
     <Compile Include="DriverSystem\DriverFlags.cs" />
     <Compile Include="DriverSystem\DriverManager.cs" />
     <Compile Include="DriverSystem\GenericDevice.cs" />
     <Compile Include="DriverSystem\GenericDriver.cs" />
     <Compile Include="DriverSystem\IDevice.cs" />
+    <Compile Include="DriverSystem\IDeviceController.cs" />
     <Compile Include="DriverSystem\IDeviceManager.cs" />
     <Compile Include="DriverSystem\IDriver.cs" />
     <Compile Include="DriverSystem\IDriverContext.cs" />
@@ -165,10 +170,13 @@
     <Compile Include="FileSystem\Ext2\GroupDescriptor.cs" />
     <Compile Include="FileSystem\Ext2\INode.cs" />
     <Compile Include="FileSystem\Ext2\SuperBlock.cs" />
-    <Compile Include="FileSystem\FAT\FAT.cs" />
-    <Compile Include="FileSystem\DiskManager.cs" />
+    <Compile Include="FileSystem\FAT\Compare.cs" />
+    <Compile Include="FileSystem\FAT\Directory.cs" />
+    <Compile Include="FileSystem\FAT\File.cs" />
+    <Compile Include="FileSystem\FAT\FileStream.cs" />
+    <Compile Include="FileSystem\FAT\FileSystem.cs" />
+    <Compile Include="FileSystem\FAT\FSSettings.cs" />
     <Compile Include="FileSystem\GenericDisk.cs" />
-    <Compile Include="FileSystem\OpenFile.cs" />
     <Compile Include="FileSystem\Partition.cs" />
     <Compile Include="Foundation\BinaryTool.cs" />
     <Compile Include="Foundation\ByteString.cs" />
@@ -209,6 +217,8 @@
     <Compile Include="Korlib\System\IO\FileAccess.cs" />
     <Compile Include="Korlib\System\IO\FileShare.cs" />
     <Compile Include="Korlib\System\IO\Path.cs" />
+    <Compile Include="Korlib\System\IO\SeekOrigin.cs" />
+    <Compile Include="Korlib\System\IO\Stream.cs" />
     <Compile Include="Korlib\System\ArgumentException.cs" />
     <Compile Include="Korlib\System\ArgumentNullException.cs" />
     <Compile Include="Korlib\System\ArgumentOutOfRangeException.cs" />
@@ -242,6 +252,7 @@
     <Compile Include="Korlib\System\UInt64.cs" />
     <Compile Include="Korlib\System\ValueType.cs" />
     <Compile Include="Korlib\System\Void.cs" />
+    <Compile Include="Korlib\Convert.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Cls.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Commands.cs" />
     <Compile Include="Shell\Commands\BuiltIn\CpuId.cs" />
@@ -273,7 +284,7 @@
     <Compile Include="Vfs\DirectoryEntry.cs" />
     <Compile Include="Vfs\DirectoryNode.cs" />
     <Compile Include="Vfs\FileSystemFactory.cs" />
-    <Compile Include="Vfs\FSSettings.cs" />
+    <Compile Include="Vfs\FSSettingsBase.cs" />
     <Compile Include="Vfs\IDirectory.cs" />
     <Compile Include="Vfs\IFileSystem.cs" />
     <Compile Include="Vfs\IFileSystemService.cs" />
