--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Korlib\System\SByte.cs" />
     <Compile Include="Korlib\System\String.cs" />
     <Compile Include="Korlib\System\SystemException.cs" />
+    <Compile Include="Korlib\System\Type.cs" />
     <Compile Include="Korlib\System\UInt16.cs" />
     <Compile Include="Korlib\System\UInt32.cs" />
     <Compile Include="Korlib\System\UInt64.cs" />
