--- a/Tools/DiagnosticTool/DiagnosticTool.csproj
+++ b/Tools/DiagnosticTool/DiagnosticTool.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D5642D60-47DE-48FA-8930-16A70D587EDC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -48,12 +48,18 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="INamedPipe.cs" />
-    <Compile Include="MainWindow.cs" />
+    <Compile Include="MainWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainWindow.Designer.cs" />
-    <Compile Include="MemoryView.cs" />
+    <Compile Include="MemoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MemoryView.Designer.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="UnitTestsView.cs" />
+    <Compile Include="UnitTestsView.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UnitTestsView.Designer.cs" />
     <Compile Include="UnixNamedPipe.cs" />
     <Compile Include="WindowsNamedPipe.cs" />
